--- a/files/json-client.html
+++ b/files/json-client.html
@@ -6,29 +6,50 @@
    * June 2015
    * Mike Amundsen (@mamund)
    * Soundtrack : Ornette Coleman Six Classic Albums (2012)
+   * Benjamin Young (@bigbluehat)
+   * Sountrack: Imagine Dragons Night Visions (2012)
    *******************************************************/
   -->
   <head>
     <title>JSON</title>
-    <link href="json-client.css" rel="stylesheet" />
+    <link href="semantic.min.css" rel="stylesheet" />
+    <style>
+    /** hidden by default **/
+    #form, #dump { display: none; }
+    @media only screen and (max-width:767px) {
+      .ui.stackable.grid > .column:not(.row) {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+      }
+    }
+    </style>
   </head>
   <body>
-    <h1 id="title"></h1>
     <div id="toplinks"></div>
-    <div id="content"></div>
-    <div id="actions"></div>
-    <div id="form"></div>
-    <div id="items"></div>
-    <div>
-      <pre id="dump"></pre>
+    <div style="margin: 5em 1em">
+      <h1 id="title" class="ui page header"></h1>
+      <div id="content" style="margin-bottom: 1em"></div>
+      <div id="actions" style="margin-bottom:1em;"></div>
+      <div class="ui mobile reversed two column stackable grid">
+        <div class="column">
+          <div id="items"></div>
+        </div>
+        <div class="column">
+          <div id="form" class="ui green segment"></div>
+        </div>
+      </div>
+      <div>
+        <pre id="dump"></pre>
+      </div>
     </div>
+
+    <script src="dom-help.js">//na </script>
+    <script src="json-client.js">//na </script>
+    <script>
+      window.onload = function() {
+        var pg = json();
+        pg.init("/home/", "TPS - Task Processing System");
+      }
+    </script>
   </body>
-  <script src="dom-help.js">//na </script>
-  <script src="json-client.js">//na </script>
-  <script>
-    window.onload = function() {
-      var pg = json();
-      pg.init("/home/", "TPS - Task Processing System");
-    }
-  </script>
 </html>
